git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6603 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-actions.html
+++ b/kra-ip-dev/1-prop-actions.html
@@ -64,7 +64,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     <div id="tabs">
       <dl class="tabul">
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institute Proposal">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institutional Proposal">
           </span></dt>
         <dt><span class="tabright">
           <input  name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-contacts.html');return document.MM_returnValue" value="Contacts">
@@ -82,7 +82,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
         <dt class="licurrent" ><span class="tabright tabcurrent">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
           </span></dt>
       </dl>
     </div>
@@ -177,66 +177,41 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </div>
             <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
               <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Print</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Print </td>
                 <td class="tabtable2-mid"><a href="#" id="A04" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F04" vspace=6></a></td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
               </tr>
             </table>
             <div class="tab-container" align="center" id="G04" style="display: none;"><br>
               <div class="h2-container">
-                <h2><span class="subhead-left">Current and Pending Reports</span> </h2>
+                <h2><span class="subhead-left">Print Reports</span> </h2>
                 <span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
               <table  cellpAdding="0" cellspacing="0"  summary="">
                 <tbody >
                   <tr>
-                    <td  ><div class="floaters" style="text-align:center">
-                     select a person:
-                        <label>
-                            <select name="select" id="select">
-                              <option selected>Godfrey, Alberta D</option>
-                              <option> Mays, Lyle</option>
-                              <option>Coltrane, John</option>
-                            </select>
-                          </label>
-                      
-                      <span class="infoline" style="text-align:center;"><br>
-                      <br>
-                      <img src="../images/tinybutton-viewreport.gif" alt="view report" width="69" height="15" vspace="5" onClick="MM_openBrWindow('1-prop-cp1.html','','scrollbars=yes,resizable=yes,width=1000,height=640')"></span>
-                      </div></td>
+                    <th  >Print Proposal Notice</th>
+                    <th  >Current &amp; Pending Support</th>
                   </tr>
-                </tbody>
-              </table>
-              <div class="h2-container">
-                <h2><span class="subhead-left">Print Proposal Notice </span> </h2>
-                <span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
-              <table  cellpAdding="0" cellspacing="0"  summary="">
-                <tbody >
                   <tr>
-                    <td  ><div class="floaters" style="text-align:center">
-                    select a notice:
-                        <label>
-                            <select name="select2" id="select2">
-                              <option>notice 1</option>
-                              <option>notice 2</option>
-                              <option>notice 3</option>
-                              <option>notice 4</option>
-                            </select>
-                          </label>
-                   
+                    <td  ><div class="floaters" align="center" style="text-align:center;"><img src="../images/tinybutton-viewnotice.gif" alt="dsdfhg" width="69" height="15" vspace="5" align="absmiddle"></div></td>
+                    <td  ><div class="floaters"  align="center" style="text-align:center;">
+                      <select name="select" id="select">
+                        <option selected>Godfrey, Alberta D</option>
+                        <option> Mays, Lyle</option>
+                        <option>Coltrane, John</option>
+                      </select>
                     <span class="infoline" style="text-align:center;"><br>
-                    <br>
-                    <img src="../images/tinybutton-viewnotice.gif" alt="dsdfhg" width="69" height="15" vspace="5"></span>
-                      </div></td>
+                    <img src="../images/tinybutton-viewreport.gif" alt="view report" width="69" height="15" vspace="5" align="absmiddle" onClick="MM_openBrWindow('1-prop-cp1.html','','scrollbars=yes,resizable=yes,width=1000,height=640')"></span></div></td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
-              <tr>
-                <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
-                <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
-              </tr>
-            </table>
+           <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+            <tr>
+              <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
+              <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
+            </tr>
+          </table>
           </div>
           <div align="right"><br>
             * required </div>
