--- a/kra-ip-dev/1-prop-contacts.html
+++ b/kra-ip-dev/1-prop-contacts.html
@@ -147,7 +147,7 @@ function addLoadEvent(func) {
     <div id="tabs">
       <dl class="tabul">
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institute Proposal">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institutional Proposal">
           </span></dt>
         <dt class="licurrent" ><span class="tabright tabcurrent">
           <input  name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-contacts.html');return document.MM_returnValue" value="Contacts">
@@ -164,7 +164,7 @@ function addLoadEvent(func) {
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
           </span></dt>
       </dl>
     </div>
