--- a/kra-ip-dev/1-prop-specialreview.html
+++ b/kra-ip-dev/1-prop-specialreview.html
@@ -64,7 +64,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       <div id="tabs">
         <dl class="tabul">
           <dt><span class="tabright">
-            <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institute Proposal">
+            <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institutional Proposal">
           </span></dt>
           <dt><span class="tabright">
             <input  name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-contacts.html');return document.MM_returnValue" value="Contacts">
@@ -81,7 +81,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
           <dt><span class="tabright">
-            <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
+            <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
           </span></dt>
         </dl>
       </div>
@@ -109,7 +109,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G1" style="display: none;">
+        <div class="tab-container" align="center" id="G1" style="display: nonee;">
           <div class="tab-container-error"> </div>
           <div class="h2-container">
             <h2><span class="subhead-left">Special Review</span></h2>
