--- a/kra-ip-dev/prop-budget.html
+++ b/kra-ip-dev/prop-budget.html
@@ -52,7 +52,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <div id="tabs">
     <dl class="tabul">
       <dt><span class="tabright ">
-        <input name="Submit" type="submit" onClick="MM_goToURL('self','prop-proposal.html');return document.MM_returnValue" value="Institute Proposal">
+        <input name="Submit" type="submit" onClick="MM_goToURL('self','prop-proposal.html');return document.MM_returnValue" value="Institutional Proposal">
         </span></dt>
      <dt class="licurrent" ><span class="tabright tabcurrent">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','prop-budget.html');return document.MM_returnValue" value="Budget Versions">
