--- a/kra-ip-dev/1-prop-distribution.html
+++ b/kra-ip-dev/1-prop-distribution.html
@@ -56,7 +56,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     <div id="tabs">
       <dl class="tabul">
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institute Proposal">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institutional Proposal">
           </span></dt>
         <dt><span class="tabright">
           <input  name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-contacts.html');return document.MM_returnValue" value="Contacts">
@@ -74,7 +74,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
           </span></dt>
       </dl>
     </div>
