--- a/kra-ip-dev/1-prop-proposal.html
+++ b/kra-ip-dev/1-prop-proposal.html
@@ -116,7 +116,7 @@ function addLoadEvent(func) {
 //--></script>
 <form>
   <div class="headerarea-kra" id="headerarea">
-    <h1>Institute Proposal <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
+    <h1>Institutional Proposal <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
     <h1 class="hidden">tab name goes here (accessibility requirement)</h1>
     <h1 class="hidden">tab name goes here (accessibility requirement)</h1>
     <div class="headerbox">
@@ -147,7 +147,7 @@ function addLoadEvent(func) {
     <div id="tabs">
       <dl class="tabul">
         <dt class="licurrent" ><span class="tabright tabcurrent">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institute Proposal">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-proposal.html');return document.MM_returnValue" value="Institutional Proposal">
           </span></dt>
         <dt><span class="tabright">
           <input  name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-contacts.html');return document.MM_returnValue" value="Contacts">
@@ -164,7 +164,7 @@ function addLoadEvent(func) {
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
           </span></dt>
       </dl>
     </div>
