--- a/kra-irb-dev/irb-customdata.html
+++ b/kra-irb-dev/irb-customdata.html
@@ -40,10 +40,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <td>10:06 AM 03/30/2005</td>
         </tr>
         <tr>
-          <th class="bord-l" scope=row><div align=right>Protocol Type:</div></th>
-          <td class="datacell-l"></td>
-          <th class="bord-l" scope=row><div align=right>Version:</div></th>
-          <td class="datacell-l">1</td>
+          <th class="bord-l" scope=row><div align=right>Protocol #:</div></th>
+          <td class="datacell-l">000235</td>
+          <th class="bord-l" scope=row><div align=right>Expiration Date:</div></th>
+          <td class="datacell-l">10/24/2009</td>
         </tr>
       </table>
   </div>
@@ -52,24 +52,28 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <div class="horz-links-bkgrnd" id="horz-links">
   <div id="tabs">
     <dl class="tabul">
-      
-      
-
       <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol.html');return document.MM_returnValue" value="Protocol">
-        </span></dt>  <dt><span class="tabright">
+        </span></dt>
+      <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-personnel.html');return document.MM_returnValue" value="Personnel">
-        </span></dt>  <dt class="licurrent" ><span class="tabright tabcurrent">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-customdata.html');return document.MM_returnValue" value="Custom Data">
-        </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-questionnaire.html');return document.MM_returnValue" value="Questionnaire">
-        </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-specialreview.html');return document.MM_returnValue" value="Special Review">
-        </span></dt>  <dt><span class="tabright">
+        </span></dt>
+      <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-permissions.html');return document.MM_returnValue" value="Permissions">
-        </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments">
-        </span></dt>   <dt><span class="tabright">
+        </span></dt>
+      <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-questionnaire.html');return document.MM_returnValue" value="Questionnaire">
+        </span></dt>
+       <dt class="licurrent" ><span class="tabright tabcurrent">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-customdata.html');return document.MM_returnValue" value="Custom Data">
+        </span></dt>
+      <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-notes.html');return document.MM_returnValue" value="Attachments &amp; Notes ">
+        </span></dt>
+      <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-specialreview.html');return document.MM_returnValue" value="Special Review">
+        </span></dt>
+      <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocolactions.html');return document.MM_returnValue" value="Protocol Actions">
         </span></dt>
     </dl>
