https://test.kuali.org/jira/browse/KRAFUNC-99
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6616 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -520,7 +520,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <!-- Amount -->
                     <td class="infoline" style="text-align:right;" nowrap="nowrap"><input style="text-align:right; width:100%;" type="text" name="fg" id="fg" value="0.00" /></td>
                     <!-- Last Update -->
-                    <td class="infoline" nowrap="nowrap" style="width:180px;">&nbsp;</td>
+                    <td class="infoline" style="width:180px;">&nbsp;</td>
                     <!-- Action -->
                     <td class="infoline" style="text-align:center;"><input name="x" src="../images/tinybutton-add1.gif" onclick="javascript: alert('If this were not a mock, this button would add a new data row.'); return false" class="tinybutton" alt="add" type="image" /></td>
                   </tr>
@@ -558,7 +558,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <input style="text-align:right; width:100%;" type="text" name="gh" id="gh" value="25,000.00" />
                       </div></td>
                     <!-- Last Update -->
-                    <td nowrap="nowrap" style="width:180px;"> James Bond 11/11/2008 08:01pm </td>
+                    <td style="width:180px;"> James Bond <br />
+                    <span class="fineprint">11/11/2008 08:01pm </span></td>
                     <!-- Action -->
                     <td style="text-align:center;"><input name="x" src="../images/tinybutton-delete1.gif" onclick="javascript: alert('If this were not a mock, this button would delete this data row.'); return false" class="tinybutton" alt="delete" type="image" /></td>
                   </tr>
@@ -596,7 +597,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <input style="text-align:right; width:100%;" type="text" name="df" id="df" value="8,276.54" />
                       </div></td>
                     <!-- Last Update -->
-                    <td nowrap="nowrap" style="width:180px;"> M. Smart 11/11/2008 08:01pm </td>
+                    <td style="width:180px;"> M. Smart <br />
+                    <span class="fineprint">11/11/2008 08:01pm </span></td>
                     <!-- Action -->
                     <td style="text-align:center;"><input name="x" src="../images/tinybutton-delete1.gif" onclick="javascript: alert('If this were not a mock, this button would delete this data row.'); return false" class="tinybutton" alt="delete" type="image" /></td>
                   </tr>
