https://test.kuali.org/jira/browse/KRAFUNC-87
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6617 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-actions.html
+++ b/kra-ip-dev/1-prop-actions.html
@@ -83,7 +83,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </span></dt>
         <dt class="licurrent" ><span class="tabright tabcurrent">
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
-          </span></dt>
+          </span></dt><dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','1-prop-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        </span>
       </dl>
     </div>
   </div>
