--- a/kra-pdb-dev/prop-proposal.html
+++ b/kra-pdb-dev/prop-proposal.html
@@ -176,7 +176,10 @@ function addLoadEvent(func) {
           </span></dt>
         <dt><span class="tabright">
           <input name="Submit" type=submit onClick="MM_goToURL('self','prop-propactions.html');return document.MM_returnValue" value="Proposal Actions">
-          </span></dt>
+          </span></dt>             <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','prop-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        </span></dt>
+
       </dl>
     </div>
   </div>
