--- a/kra-ip-dev/1-prop-contacts.html
+++ b/kra-ip-dev/1-prop-contacts.html
@@ -165,7 +165,9 @@ function addLoadEvent(func) {
           </span></dt>
         <dt><span class="tabright">
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
-          </span></dt>
+          </span></dt><dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','1-prop-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        </span>
       </dl>
     </div>
   </div>
