--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -291,9 +291,10 @@
     </div>
     <div class="right">
         <div class="excol">
-          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif" onclick="javascript: alert('If this were not a mock, this button would open the Site Index.'); return false;" />
-          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" onclick="javascript: alert('If this were not a mock, this button would expand all panels.'); return false;" alt="expand all" />
-          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" onclick="javascript: alert('If this were not a mock, this button would collapse all panels.'); return false;" alt="collapse all" />
+          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-returntoaward.gif" onclick="javascript: alert('This button would return the browser to the award.'); return false;" />
+          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif" onclick="javascript: alert('This button would open the Site Index.'); return false;" />
+          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" onclick="javascript: alert('This button would expand all panels.'); return false;" alt="expand all" />
+          <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" onclick="javascript: alert('This button would collapse all panels.'); return false;" alt="collapse all" />
             <br>
         </div>
     </div>
