--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -184,7 +184,7 @@ Page
 			<textarea name="z" style="width:100%; text-align:left;" rows="4"></textarea>
         </td>
         <td style="border:none; width:20px; vertical-align:bottom;">
-			<input name="x" src="../images/pencil_add.png" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
+			<input name="x" src="../images/pencil_add.png" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" style="border:none;" alt="Expanded Text Area" type="image" />
 		</td>
     </tr>
 </table>
@@ -196,7 +196,7 @@ Page
             x
         </td>
         <td style="border:none; width:20px; vertical-align:bottom;">
-            <input name="x" src="../images/openreadonly_greenarrow01.png" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" class="tinybutton" alt="Expanded Read Only Text Area" type="image" />
+            <input name="x" src="../images/openreadonly_greenarrow01.png" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" style="border:none;" alt="Expanded Read Only Text Area" type="image" />
         </td>
     </tr>
 </table>
