https://test.kuali.org/jira/browse/KRAFUNC-87
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6627 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -83,7 +83,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt>
         
               <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyPA.html');return document.MM_returnValue" value="Medusa">
         </span></dt>
     </dl>
   </div>
