--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -79,7 +79,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt> <dt class="licurrent" ><span class="tabright tabcurrent">
         <input name="Submit2" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
         </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyPA.html');return document.MM_returnValue" value="Medusa">
         </span></dt>
     </dl>
   </div>
