--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -308,7 +308,7 @@
         </span></dt>
         
               <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyPA.html');return document.MM_returnValue" value="Medusa">
         </span></dt>
         </dl>
     </div>
