--- a/kra-awa-dev/aw-specialreview.html
+++ b/kra-awa-dev/aw-specialreview.html
@@ -83,7 +83,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt>
         
               <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyPA.html');return document.MM_returnValue" value="Medusa">
         </span></dt>
     </dl>
   </div>
