git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6628 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money-singlenode.html
+++ b/kra-awa-dev/aw-time-money-singlenode.html
@@ -278,7 +278,7 @@
     <div id="tabs">
         <dl class="tabul">
             <dt class="licurrent" ><span class="tabright tabcurrent">
-                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time &amp; Money">
+                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money-choice.html');return document.MM_returnValue" value="Time &amp; Money">
             </span></dt>
         </dl>
     </div>
