--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -282,7 +282,7 @@
                 <input name="Submit" type="submit" onClick="MM_goToURL('self','aw-contacts.html');return document.MM_returnValue" value="Contacts">
             </span></dt>
             <dt class="licurrent" ><span class="tabright tabcurrent">
-                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Commitments">
+                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money-choice.html');return document.MM_returnValue" value="Commitments">
             </span></dt>
             <dt><span class="tabright">
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-budgetversions.html');return document.MM_returnValue" value="Budget Versions">
@@ -321,7 +321,7 @@
     </div>
     <div class="right">
         <div class="excol">
-          <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" src="../images/tinybutton-timemoney.gif" />
+          <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-time-money-choice.html');return document.MM_returnValue" src="../images/tinybutton-timemoney.gif" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif" onclick="javascript: alert('If this were not a mock, this button would open the Site Index.'); return false;" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" onclick="javascript: alert('If this were not a mock, this button would expand all panels.'); return false;" alt="expand all" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" onclick="javascript: alert('If this were not a mock, this button would collapse all panels.'); return false;" alt="collapse all" />
