--- a/kra-awa-dev/aw-specialreview.html
+++ b/kra-awa-dev/aw-specialreview.html
@@ -94,7 +94,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
     <div class="right">
       <div class="excol">
-        <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" src="../images/tinybutton-timemoney.gif" />
+        <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-time-money-choice.html');return document.MM_returnValue" src="../images/tinybutton-timemoney.gif" />
         <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif" onclick="javascript: alert('If this were not a mock, this button would open the Site Index.'); return false;" />
         <!--<input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" onclick="javascript: alert('If this were not a mock, this button would expand all panels.'); return false;" alt="expand all" />
         <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" onclick="javascript: alert('If this were not a mock, this button would collapse all panels.'); return false;" alt="collapse all" />-->
