--- a/kra-awa-dev/aw-time-money-compactAwardHierarchy.html
+++ b/kra-awa-dev/aw-time-money-compactAwardHierarchy.html
@@ -287,7 +287,7 @@
 				<input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-commitments.html');return document.MM_returnValue" value="Commitments">
         	</span></dt>
             <dt class="licurrent" ><span class="tabright tabcurrent">
-                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money">
+                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money-choice.html');return document.MM_returnValue" value="Time & Money">
             </span></dt>
             <dt><span class="tabright">
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
