--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -278,7 +278,7 @@
     <div id="tabs">
         <dl class="tabul">
             <dt class="licurrent" ><span class="tabright tabcurrent">
-                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time &amp; Money">
+                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money-choice.html');return document.MM_returnValue" value="Time &amp; Money">
             </span></dt>
         </dl>
     </div>
