--- a/kra-irb-dev/irb-notes.html
+++ b/kra-irb-dev/irb-notes.html
@@ -106,7 +106,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
             </table>
             <!-- TAB -->
-            <div class="tab-container" align="center" id="G1" style="display: none;">
+            <div class="tab-container" align="center" id="G1" style="display: nonee;">
               <div class="h2-container"> <span class="subhead-left">
                 <h2> Add Protocol Attachments</h2>
                 </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </span> </div>
@@ -168,7 +168,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th><div align="right">Description:</div></th>
                   <td><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
                     <tr>
-                      <td style="border:none;"><textarea name="zs3" style="width:100%; text-align:left;" rows="3"></textarea></td>
+                      <td style="border:none;"><span class="infoline">
+                        <input name="textfield" type="text" id="textfield" style="width:100%">
+                      </span></td>
                       <td style="border:none; width:20px; vertical-align:bottom;"><input name="xs3" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" /></td>
                     </tr>
                   </table></td>
@@ -183,7 +185,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </table>
               <table cellpadding=0 cellspacing="0" summary="">
                 <tr>
-                  <td colspan="13" nowrap class="tab-subhead1"><a href="#" id="A44" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F44"></a> Informed Consent Document - complete</td>
+                  <td colspan="13" nowrap class="tab-subhead1"><a href="#" id="A44" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F44"></a> Informed Consent Document - complete <span style="font-weight:normal">(Description: Quid mihi ergo est cum hominibus...)</span></td>
                 </tr>
                 <tbody id="G44" style="display: none;">
                 
@@ -246,7 +248,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <th><div align="right">Description:</div></th>
                     <td><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td style="border:none;"><textarea name="zs2" style="width:100%; text-align:left;" rows="3"></textarea></td>
+                        <td style="border:none;"><span class="infoline">
+                          <input name="textfield" type="text" id="textfield" style="width:100%" value="Quid mihi ergo est cum hominibus, ut audiant confessiones meas, quasi ipsi sanaturi sint omnes">
+                        </span></td>
                         <td style="border:none; width:20px; vertical-align:bottom;"><input name="xs2" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" /></td>
                       </tr>
                     </table></td>
@@ -296,7 +300,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </table>
               <table cellpadding=0 cellspacing="0" summary="">
                 <tr>
-                  <td colspan="13" nowrap class="tab-subhead1"><a href="#" id="A277" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F277"></a> Recruitment Brochure- incomplete</td>
+                  <td colspan="13" nowrap class="tab-subhead1"><a href="#" id="A277" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F277"></a> Recruitment Brochure- incomplete <span style="font-weight:normal">(Description: Quid mihi ergo est cum hominibus...)</span></td>
                 </tr>
                 <tbody id="G277" style="display: none;">
                   <tr>
@@ -358,7 +362,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <th><div align="right">Description:</div></th>
                     <td><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td style="border:none;"><textarea name="zs" style="width:100%; text-align:left;" rows="3"></textarea></td>
+                        <td style="border:none;"><span class="infoline">
+                          <input name="textfield" type="text" id="textfield" style="width:100%" value="Quid mihi ergo est cum hominibus, ut audiant confessiones meas, quasi ipsi sanaturi sint omnes">
+                        </span></td>
                         <td style="border:none; width:20px; vertical-align:bottom;"><input name="xs" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" /></td>
                       </tr>
                     </table></td>
