git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6637 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -790,7 +790,7 @@
                               </tr>
                             </table>
                           </div>
-                          <div id="copyaward" style="display:nonee" align="center">
+                          <div id="copyaward" style="display:none" align="center">
                             <table style="width:80%; border-collapse:collapse; border:; padding:0px;">
                               <tr>
                                 <td colspan="4" class="subhead" style="border-collapse:collapse; border:; vertical-align:top;">Award Copy</td>
